# aloud

./: .gitignore  README.md  aloud  aloud_core.py  aloud_daemon.py  aloud_on_prompt.py  aloud_on_stop.py  install_codex.py  install_hook.py  pyproject.toml  setup.sh  try_voices.py
commands/: aloud-off.md  aloud-on.md
internal/milestones/: attention-aware-audio.md
src/aloud/: __init__.py  __main__.py  attention.py  cli.py  config.py  daemon.py  hooks.py  installer.py  paths.py  registry.py  socket_client.py  text.py  transcripts.py
tests/: conftest.py  test_aloud.py  test_attention_events.py  test_daemon_and_cli.py  test_installer.py  test_registry_and_hooks.py  test_text_and_payloads.py
